--- a/Projeto-ML-Regressao-Precos-das-Casas-Python.ipynb
+++ b/Projeto-ML-Regressao-Precos-das-Casas-Python.ipynb
@@ -1194,7 +1194,9 @@
    "id": "3947c7c5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Remover algumas colunas com outliers"
+   ]
   },
   {
    "cell_type": "code",
