--- a/Projeto-ML-Regressao-Precos-das-Casas-Python.ipynb
+++ b/Projeto-ML-Regressao-Precos-das-Casas-Python.ipynb
@@ -1204,7 +1204,9 @@
    "id": "406b2082",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Fazer o tratamento de algumas colunas"
+   ]
   },
   {
    "cell_type": "code",
