--- a/Projeto-ML-Regressao-Precos-das-Casas-Python.ipynb
+++ b/Projeto-ML-Regressao-Precos-das-Casas-Python.ipynb
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "71943bdf",
+   "id": "eaee0cee",
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "1434aa3a",
+   "id": "226d14fb",
    "metadata": {},
    "outputs": [
     {
@@ -1405,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "7c4b81a5",
+   "id": "5ea30d6d",
    "metadata": {},
    "outputs": [
     {
@@ -1526,7 +1526,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "40be53fc",
+   "id": "55302ef0",
    "metadata": {},
    "outputs": [
     {
@@ -1736,13 +1736,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "406b2082",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Fazer o tratamento de algumas colunas com a media\n",
     "dados_total['LotFrontage'] = dados_total['LotFrontage'].fillna(int(dados_total['LotFrontage'].mean()))\n",
+    "dados_total['GarageYrBlt'] = dados_total['GarageYrBlt'].fillna(int(dados_total['GarageYrBlt'].mean()))\n",
     "dados_total['GarageArea'] = dados_total['GarageArea'].fillna(int(dados_total['GarageArea'].mean()))\n",
     "dados_total['GarageCars'] = dados_total['GarageCars'].fillna(int(dados_total['GarageCars'].mean()))\n",
     "dados_total['MasVnrArea'] = dados_total['MasVnrArea'].fillna(int(dados_total['MasVnrArea'].mean()))\n",
@@ -1756,36 +1757,370 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "fb8f8463",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 2919 entries, 0 to 1458\n",
+      "Data columns (total 78 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   Id             2919 non-null   int64  \n",
+      " 1   MSSubClass     2919 non-null   int64  \n",
+      " 2   MSZoning       2915 non-null   object \n",
+      " 3   LotFrontage    2919 non-null   float64\n",
+      " 4   LotArea        2919 non-null   int64  \n",
+      " 5   Street         2919 non-null   object \n",
+      " 6   LotShape       2919 non-null   object \n",
+      " 7   LandContour    2919 non-null   object \n",
+      " 8   Utilities      2917 non-null   object \n",
+      " 9   LotConfig      2919 non-null   object \n",
+      " 10  LandSlope      2919 non-null   object \n",
+      " 11  Neighborhood   2919 non-null   object \n",
+      " 12  Condition1     2919 non-null   object \n",
+      " 13  Condition2     2919 non-null   object \n",
+      " 14  BldgType       2919 non-null   object \n",
+      " 15  HouseStyle     2919 non-null   object \n",
+      " 16  OverallQual    2919 non-null   int64  \n",
+      " 17  OverallCond    2919 non-null   int64  \n",
+      " 18  YearBuilt      2919 non-null   int64  \n",
+      " 19  YearRemodAdd   2919 non-null   int64  \n",
+      " 20  RoofStyle      2919 non-null   object \n",
+      " 21  RoofMatl       2919 non-null   object \n",
+      " 22  Exterior1st    2918 non-null   object \n",
+      " 23  Exterior2nd    2918 non-null   object \n",
+      " 24  MasVnrType     2895 non-null   object \n",
+      " 25  MasVnrArea     2919 non-null   float64\n",
+      " 26  ExterQual      2919 non-null   object \n",
+      " 27  ExterCond      2919 non-null   object \n",
+      " 28  Foundation     2919 non-null   object \n",
+      " 29  BsmtQual       2838 non-null   object \n",
+      " 30  BsmtCond       2837 non-null   object \n",
+      " 31  BsmtExposure   2837 non-null   object \n",
+      " 32  BsmtFinType1   2840 non-null   object \n",
+      " 33  BsmtFinSF1     2919 non-null   float64\n",
+      " 34  BsmtFinType2   2839 non-null   object \n",
+      " 35  BsmtFinSF2     2919 non-null   float64\n",
+      " 36  BsmtUnfSF      2919 non-null   float64\n",
+      " 37  TotalBsmtSF    2919 non-null   float64\n",
+      " 38  Heating        2919 non-null   object \n",
+      " 39  HeatingQC      2919 non-null   object \n",
+      " 40  CentralAir     2919 non-null   object \n",
+      " 41  Electrical     2918 non-null   object \n",
+      " 42  1stFlrSF       2919 non-null   int64  \n",
+      " 43  2ndFlrSF       2919 non-null   int64  \n",
+      " 44  LowQualFinSF   2919 non-null   int64  \n",
+      " 45  GrLivArea      2919 non-null   int64  \n",
+      " 46  BsmtFullBath   2919 non-null   float64\n",
+      " 47  BsmtHalfBath   2919 non-null   float64\n",
+      " 48  FullBath       2919 non-null   int64  \n",
+      " 49  HalfBath       2919 non-null   int64  \n",
+      " 50  BedroomAbvGr   2919 non-null   int64  \n",
+      " 51  KitchenAbvGr   2919 non-null   int64  \n",
+      " 52  KitchenQual    2918 non-null   object \n",
+      " 53  TotRmsAbvGrd   2919 non-null   int64  \n",
+      " 54  Functional     2917 non-null   object \n",
+      " 55  Fireplaces     2919 non-null   int64  \n",
+      " 56  FireplaceQu    1499 non-null   object \n",
+      " 57  GarageType     2762 non-null   object \n",
+      " 58  GarageYrBlt    2919 non-null   float64\n",
+      " 59  GarageFinish   2760 non-null   object \n",
+      " 60  GarageCars     2919 non-null   float64\n",
+      " 61  GarageArea     2919 non-null   float64\n",
+      " 62  GarageQual     2760 non-null   object \n",
+      " 63  GarageCond     2760 non-null   object \n",
+      " 64  PavedDrive     2919 non-null   object \n",
+      " 65  WoodDeckSF     2919 non-null   int64  \n",
+      " 66  OpenPorchSF    2919 non-null   int64  \n",
+      " 67  EnclosedPorch  2919 non-null   int64  \n",
+      " 68  3SsnPorch      2919 non-null   int64  \n",
+      " 69  ScreenPorch    2919 non-null   int64  \n",
+      " 70  PoolArea       2919 non-null   int64  \n",
+      " 71  MiscVal        2919 non-null   int64  \n",
+      " 72  MoSold         2919 non-null   int64  \n",
+      " 73  YrSold         2919 non-null   int64  \n",
+      " 74  SaleType       2918 non-null   object \n",
+      " 75  SaleCondition  2919 non-null   object \n",
+      " 76  SalePrice      1460 non-null   float64\n",
+      " 77  fold           2919 non-null   int64  \n",
+      "dtypes: float64(12), int64(27), object(39)\n",
+      "memory usage: 1.8+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Visualizando algumas informações do dataset de treino\n",
+    "dados_total.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "50ac264c",
+   "metadata": {},
+   "outputs": [
+    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>MSSubClass</th>\n",
+       "      <th>MSZoning</th>\n",
+       "      <th>LotFrontage</th>\n",
+       "      <th>LotArea</th>\n",
+       "      <th>Street</th>\n",
+       "      <th>LotShape</th>\n",
+       "      <th>LandContour</th>\n",
+       "      <th>Utilities</th>\n",
+       "      <th>LotConfig</th>\n",
+       "      <th>...</th>\n",
+       "      <th>3SsnPorch</th>\n",
+       "      <th>ScreenPorch</th>\n",
+       "      <th>PoolArea</th>\n",
+       "      <th>MiscVal</th>\n",
+       "      <th>MoSold</th>\n",
+       "      <th>YrSold</th>\n",
+       "      <th>SaleType</th>\n",
+       "      <th>SaleCondition</th>\n",
+       "      <th>SalePrice</th>\n",
+       "      <th>fold</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>60</td>\n",
+       "      <td>RL</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>8450</td>\n",
+       "      <td>Pave</td>\n",
+       "      <td>Reg</td>\n",
+       "      <td>Lvl</td>\n",
+       "      <td>AllPub</td>\n",
+       "      <td>Inside</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>WD</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>208500.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>RL</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>9600</td>\n",
+       "      <td>Pave</td>\n",
+       "      <td>Reg</td>\n",
+       "      <td>Lvl</td>\n",
+       "      <td>AllPub</td>\n",
+       "      <td>FR2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>WD</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>181500.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>60</td>\n",
+       "      <td>RL</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>11250</td>\n",
+       "      <td>Pave</td>\n",
+       "      <td>IR1</td>\n",
+       "      <td>Lvl</td>\n",
+       "      <td>AllPub</td>\n",
+       "      <td>Inside</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>WD</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>223500.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>70</td>\n",
+       "      <td>RL</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>9550</td>\n",
+       "      <td>Pave</td>\n",
+       "      <td>IR1</td>\n",
+       "      <td>Lvl</td>\n",
+       "      <td>AllPub</td>\n",
+       "      <td>Corner</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>WD</td>\n",
+       "      <td>Abnorml</td>\n",
+       "      <td>140000.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>60</td>\n",
+       "      <td>RL</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>14260</td>\n",
+       "      <td>Pave</td>\n",
+       "      <td>IR1</td>\n",
+       "      <td>Lvl</td>\n",
+       "      <td>AllPub</td>\n",
+       "      <td>FR2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>WD</td>\n",
+       "      <td>Normal</td>\n",
+       "      <td>250000.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 78 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Typ     2717\n",
-       "Min2      70\n",
-       "Min1      65\n",
-       "Mod       35\n",
-       "Maj1      19\n",
-       "Maj2       9\n",
-       "Sev        2\n",
-       "Name: Functional, dtype: int64"
+       "   Id  MSSubClass MSZoning  LotFrontage  LotArea Street LotShape LandContour  \\\n",
+       "0   1          60       RL         65.0     8450   Pave      Reg         Lvl   \n",
+       "1   2          20       RL         80.0     9600   Pave      Reg         Lvl   \n",
+       "2   3          60       RL         68.0    11250   Pave      IR1         Lvl   \n",
+       "3   4          70       RL         60.0     9550   Pave      IR1         Lvl   \n",
+       "4   5          60       RL         84.0    14260   Pave      IR1         Lvl   \n",
+       "\n",
+       "  Utilities LotConfig  ... 3SsnPorch ScreenPorch PoolArea MiscVal MoSold  \\\n",
+       "0    AllPub    Inside  ...         0           0        0       0      2   \n",
+       "1    AllPub       FR2  ...         0           0        0       0      5   \n",
+       "2    AllPub    Inside  ...         0           0        0       0      9   \n",
+       "3    AllPub    Corner  ...         0           0        0       0      2   \n",
+       "4    AllPub       FR2  ...         0           0        0       0     12   \n",
+       "\n",
+       "  YrSold  SaleType  SaleCondition  SalePrice  fold  \n",
+       "0   2008        WD         Normal   208500.0     1  \n",
+       "1   2007        WD         Normal   181500.0     1  \n",
+       "2   2008        WD         Normal   223500.0     1  \n",
+       "3   2006        WD        Abnorml   140000.0     1  \n",
+       "4   2008        WD         Normal   250000.0     1  \n",
+       "\n",
+       "[5 rows x 78 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dados_total['Functional'].value_counts()"
+    "# Visualizando os dados novamente\n",
+    "dados_total.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "6a2f5328",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "object     39\n",
+       "int64      27\n",
+       "float64    12\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados_total.dtypes.value_counts()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50ac264c",
+   "id": "525921ae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3e69b8d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b117882",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd7eb7d2",
    "metadata": {},
    "outputs": [],
    "source": []
