--- a/Projeto-ML-Regressao-Precos-das-Casas-Python.ipynb
+++ b/Projeto-ML-Regressao-Precos-das-Casas-Python.ipynb
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "eaee0cee",
+   "id": "e992e7a3",
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "226d14fb",
+   "id": "5607caf6",
    "metadata": {},
    "outputs": [
     {
@@ -1405,7 +1405,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5ea30d6d",
+   "id": "a1bdf060",
    "metadata": {},
    "outputs": [
     {
@@ -1526,7 +1526,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "55302ef0",
+   "id": "dcbe3ffe",
    "metadata": {},
    "outputs": [
     {
@@ -2072,7 +2072,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "6a2f5328",
+   "id": "c1c99a49",
    "metadata": {},
    "outputs": [
     {
@@ -2096,7 +2096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "525921ae",
+   "id": "18ecaeac",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2104,7 +2104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3e69b8d",
+   "id": "cc1c601f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2112,18 +2112,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b117882",
+   "id": "b949acea",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "encoder = LabelEncoder()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd7eb7d2",
+   "id": "56613acc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in cat:\n",
+    "    for dataset in combine:\n",
+    "        dataset[i] = encoder.fit_transform(dataset[i])\n",
+    "combine = [train_df,test_df]"
+   ]
   }
  ],
  "metadata": {
