--- a/Projeto-ML-Regressao-Precos-das-Casas-Python.ipynb
+++ b/Projeto-ML-Regressao-Precos-das-Casas-Python.ipynb
@@ -18,7 +18,8 @@
     "# Importando os pacotes\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.preprocessing import LabelEncoder"
    ]
   },
   {
@@ -889,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e992e7a3",
+   "id": "c67ecf22",
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5607caf6",
+   "id": "4de60294",
    "metadata": {},
    "outputs": [
     {
@@ -1405,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a1bdf060",
+   "id": "bfec8b75",
    "metadata": {},
    "outputs": [
     {
@@ -1526,7 +1527,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "dcbe3ffe",
+   "id": "51b2cc5f",
    "metadata": {},
    "outputs": [
     {
@@ -2072,7 +2073,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "c1c99a49",
+   "id": "16dce787",
    "metadata": {},
    "outputs": [
     {
@@ -2096,7 +2097,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18ecaeac",
+   "id": "e5bfaccf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2104,7 +2105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc1c601f",
+   "id": "97e9f89d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2112,7 +2113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b949acea",
+   "id": "410a1fd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2122,7 +2123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56613acc",
+   "id": "53573237",
    "metadata": {},
    "outputs": [],
    "source": [
