--- a/Projeto-ML-Regressao-Precos-das-Casas-Python.ipynb
+++ b/Projeto-ML-Regressao-Precos-das-Casas-Python.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "396fa087",
+   "id": "4008dccf",
    "metadata": {},
    "source": [
     "### Definição de problema\n",
@@ -18,6 +18,14 @@
     "Preveja preços de venda\n",
     "\n",
     "Peça a um comprador de imóveis para descrever a casa dos seus sonhos, e eles provavelmente não começarão com a altura do teto do porão ou a proximidade de uma ferrovia leste-oeste. Mas o conjunto de dados desta competição de playground prova que muito mais influencia as negociações de preços do que o número de quartos ou uma cerca branca.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a23dcf5b",
+   "metadata": {},
+   "source": [
+    "### Análise Exploratória de Dados"
    ]
   },
   {
@@ -72,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "89aebb35",
+   "id": "4cd2e053",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "989bde6c",
+   "id": "5eca4b1b",
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1226,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "a59d37db",
+   "id": "c61b3348",
    "metadata": {},
    "outputs": [
     {
@@ -2550,7 +2558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32058a2f",
+   "id": "6d97fe78",
    "metadata": {},
    "source": [
     "#### Suposições baseadas na análise de dados até agora.\n",
@@ -2559,18 +2567,41 @@
     "Queremos saber quão bem cada recurso se correlaciona com SalePrice.\n",
     "\n",
     "#### Completando: \n",
-    "Queremos completar todos os valores vazios no conjunto de dados\n",
-    "\n",
-    "#### Analisar por recursos dinâmicos?\n",
-    "Podemos analisar a correlação futura dinamizando cada recurso.\n",
-    "\n",
-    "Podemos ver a variação do SalePrice com diferentes recursos com diferentes categorias. Portanto, devemos usar todos esses recursos para nosso treinamento de modelo."
+    "Queremos completar todos os valores vazios no conjunto de dados\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "c2e2ac12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Primeiro, queremos criar duas variáveis categóricas e numéricas\n",
+    "cat = dados_treino.select_dtypes('object')\n",
+    "num = dados_treino.select_dtypes('number')\n",
+    "# Mas não quero a coluna Id e SalePrice\n",
+    "num = num.drop(['Id', 'SalePrice'], axis = 1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc8225bd",
+   "id": "bae18e60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ordem_cor = itertools.cycle[\"orange\",\"pink\",\"blue\",\"brown\",\"red\",\"grey\",\"yellow\",\"green\"])\n",
+    "for i in num:\n",
+    "    plt.scatter(dados_treino[i], dados_treino['SalePrice'], color=next(ordem_cor))\n",
+    "    plt.title(i)\n",
+    "    plt.xlabel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b41a0664",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2578,23 +2609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ca05e75",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f0b5dabe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dbebcb42",
+   "id": "5f4d0a76",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2602,7 +2617,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8255339d",
+   "id": "6a8916b2",
    "metadata": {},
    "outputs": [
     {
@@ -2816,7 +2831,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "1e7521c5",
+   "id": "67887aac",
    "metadata": {},
    "outputs": [
     {
@@ -3118,7 +3133,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "0ccd2a54",
+   "id": "5fe648c8",
    "metadata": {},
    "outputs": [
     {
@@ -3239,7 +3254,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8284ed64",
+   "id": "512128f2",
    "metadata": {},
    "outputs": [
     {
@@ -3785,7 +3800,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "f8defb19",
+   "id": "82ddab14",
    "metadata": {},
    "outputs": [
     {
@@ -3809,7 +3824,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88630e62",
+   "id": "93a1aca7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3817,7 +3832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bac495c",
+   "id": "f2788123",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3827,7 +3842,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64c0c2a3",
+   "id": "bc9b81d9",
    "metadata": {},
    "outputs": [],
    "source": [
