--- a/Projeto-ML-Regressao-Precos-das-Casas-Python.ipynb
+++ b/Projeto-ML-Regressao-Precos-das-Casas-Python.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1e5b857",
+   "id": "01c6d7ee",
    "metadata": {},
    "source": [
     "### Definição de problema\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "916e2279",
+   "id": "7e88a20e",
    "metadata": {},
    "source": [
     "### Análise Exploratória de Dados"
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4d5ea61d",
+   "id": "77a75ce1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d99ef97f",
+   "id": "3365c82b",
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e63af193",
+   "id": "16ea69df",
    "metadata": {},
    "outputs": [
     {
@@ -2538,7 +2538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a111dc63",
+   "id": "4eef3410",
    "metadata": {},
    "source": [
     "#### Suposições baseadas na análise de dados até agora.\n",
@@ -2553,7 +2553,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "56673de1",
+   "id": "63978d0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2567,7 +2567,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4f45cb85",
+   "id": "e2e60721",
    "metadata": {},
    "outputs": [
     {
@@ -3015,7 +3015,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3db306cb",
+   "id": "409de0c4",
    "metadata": {},
    "outputs": [
     {
@@ -3557,7 +3557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ca8e175",
+   "id": "3e342e7c",
    "metadata": {},
    "source": [
     "### Manipulação dos dados"
@@ -3566,7 +3566,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3f81a5ae",
+   "id": "5d766df6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3614,7 +3614,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d6f94fda",
+   "id": "001b6cca",
    "metadata": {},
    "outputs": [
     {
@@ -3637,7 +3637,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8cc91fd0",
+   "id": "e2254172",
    "metadata": {},
    "outputs": [
     {
@@ -3660,10 +3660,11 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "7c2ba637",
+   "id": "58b71ca7",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Convertendo colunas categoricas em numericas\n",
     "encoder = LabelEncoder()\n",
     "for i in cat:\n",
     "    for dataset in dados_total:\n",
@@ -3674,7 +3675,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "01c12664",
+   "id": "1a592028",
    "metadata": {},
    "outputs": [
     {
@@ -4319,7 +4320,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "9fc30ae6",
+   "id": "52ec39c8",
    "metadata": {},
    "outputs": [
     {
@@ -4951,7 +4952,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73ea9ab9",
+   "id": "49490932",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4959,7 +4960,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "393c2ca3",
+   "id": "6dd0fb9b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4967,7 +4968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0bbaa4e",
+   "id": "b00bf3cb",
    "metadata": {},
    "outputs": [],
    "source": []
