--- a/Projeto-ML-Regressao-Precos-das-Casas-Python.ipynb
+++ b/Projeto-ML-Regressao-Precos-das-Casas-Python.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "id": "a2630929",
    "metadata": {},
    "outputs": [],
@@ -44,6 +44,7 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn import linear_model\n",
+    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor, AdaBoostRegressor\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "%matplotlib inline"
@@ -6317,6 +6318,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eac0727c",
+   "metadata": {},
+   "source": [
+    "### Regressão Linear"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "id": "9f3b3a03",
@@ -6396,20 +6405,115 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "13ac7df8",
+   "metadata": {},
+   "source": [
+    "### Árvore de Decisão"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9c408c37",
+   "execution_count": 47,
+   "id": "183d7597",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Criando o objeto arvore de decisão de regressão\n",
+    "arvoredecisao = RandomForestRegressor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "29b56584",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor()"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Treinando o modelo com dados de treino\n",
+    "arvoredecisao.fit(X_treino, y_treino)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "d8b5c2c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "98.04 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Checando o score\n",
+    "print(round(arvoredecisao.score(X_treino, y_treino)*100,2),'%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b42909e6",
+   "metadata": {},
+   "source": [
+    "### Gradient boosting"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd76eb10",
+   "id": "1494505c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Criando o objeto arvore de decisão de regressão\n",
+    "gbreg = GradientBoostingRegressor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "551fee57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gbreg.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9101298a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(round(gbreg.score(X_train, y_train)*100,2),'%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fecc543",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
