--- a/Projeto-ML-Regressao-Precos-das-Casas-Python.ipynb
+++ b/Projeto-ML-Regressao-Precos-das-Casas-Python.ipynb
@@ -6319,7 +6319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eac0727c",
+   "id": "9d21a29d",
    "metadata": {},
    "source": [
     "### Regressão Linear"
@@ -6406,7 +6406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13ac7df8",
+   "id": "c8322e48",
    "metadata": {},
    "source": [
     "### Árvore de Decisão"
@@ -6415,7 +6415,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "183d7597",
+   "id": "4bc6e8e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6426,7 +6426,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "29b56584",
+   "id": "d1dc866d",
    "metadata": {},
    "outputs": [
     {
@@ -6448,7 +6448,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "d8b5c2c6",
+   "id": "50992eb8",
    "metadata": {},
    "outputs": [
     {
@@ -6466,7 +6466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b42909e6",
+   "id": "8e08ca35",
    "metadata": {},
    "source": [
     "### Gradient boosting"
@@ -6474,46 +6474,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1494505c",
+   "execution_count": 50,
+   "id": "a8c317f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Criando o objeto arvore de decisão de regressão\n",
+    "# Criando o objeto Gradient boosting\n",
     "gbreg = GradientBoostingRegressor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "551fee57",
+   "execution_count": 52,
+   "id": "a606e0c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GradientBoostingRegressor()"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "gbreg.fit(X_train, y_train)"
+    "# Treinando o modelo com dados de treino\n",
+    "gbreg.fit(X_treino, y_treino)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "797e7ead",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "96.53 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Checando o score\n",
+    "print(round(gbreg.score(X_treino, y_treino)*100,2),'%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0b3daa8",
+   "metadata": {},
+   "source": [
+    "### Ada boosting"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9101298a",
+   "id": "34bc445d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(round(gbreg.score(X_train, y_train)*100,2),'%')"
+    "# Criando o objeto Ada boost"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7fecc543",
+   "id": "ea894213",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f238154",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
