--- a/Projeto-ML-Regressao-Precos-das-Casas-Python.ipynb
+++ b/Projeto-ML-Regressao-Precos-das-Casas-Python.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 63,
    "id": "a2630929",
    "metadata": {},
    "outputs": [],
@@ -45,6 +45,7 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn import linear_model\n",
     "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor, AdaBoostRegressor\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "%matplotlib inline"
@@ -6319,7 +6320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d21a29d",
+   "id": "d5f9f6fb",
    "metadata": {},
    "source": [
     "### Regressão Linear"
@@ -6406,16 +6407,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8322e48",
+   "id": "60e2a6bc",
    "metadata": {},
    "source": [
-    "### Árvore de Decisão"
+    "### Floresta aleatória"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "4bc6e8e0",
+   "id": "e47670f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6426,7 +6427,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "d1dc866d",
+   "id": "3202b8e5",
    "metadata": {},
    "outputs": [
     {
@@ -6448,7 +6449,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "50992eb8",
+   "id": "ad90bc2c",
    "metadata": {},
    "outputs": [
     {
@@ -6466,7 +6467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e08ca35",
+   "id": "bb1ffc9c",
    "metadata": {},
    "source": [
     "### Gradient boosting"
@@ -6474,19 +6475,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "a8c317f5",
+   "execution_count": 55,
+   "id": "a78566ff",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Criando o objeto Gradient boosting\n",
-    "gbreg = GradientBoostingRegressor()"
+    "gradient = GradientBoostingRegressor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "a606e0c0",
+   "execution_count": 56,
+   "id": "51430dcb",
    "metadata": {},
    "outputs": [
     {
@@ -6495,20 +6496,20 @@
        "GradientBoostingRegressor()"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Treinando o modelo com dados de treino\n",
-    "gbreg.fit(X_treino, y_treino)"
+    "gradient.fit(X_treino, y_treino)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "797e7ead",
+   "execution_count": 57,
+   "id": "5d91d3ae",
    "metadata": {},
    "outputs": [
     {
@@ -6521,12 +6522,12 @@
    ],
    "source": [
     "# Checando o score\n",
-    "print(round(gbreg.score(X_treino, y_treino)*100,2),'%')"
+    "print(round(gradient.score(X_treino, y_treino)*100,2),'%')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b0b3daa8",
+   "id": "0d5be4e8",
    "metadata": {},
    "source": [
     "### Ada boosting"
@@ -6534,18 +6535,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "34bc445d",
+   "execution_count": 58,
+   "id": "c247b70b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Criando o objeto Ada boost"
+    "# Criando o objeto Ada boosting\n",
+    "ada = AdaBoostRegressor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "f9ee4cb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AdaBoostRegressor()"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Treinando o modelo com dados de treino\n",
+    "ada.fit(X_treino, y_treino)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "7c7be832",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "87.86 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Checando o score\n",
+    "print(round(ada.score(X_treino, y_treino)*100,2),'%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66dbbdf9",
+   "metadata": {},
+   "source": [
+    "### Ajustar o Modelo\n",
+    "\n",
+    "Aqui vamos experimentar esses diferentes modelos com diferentes parâmetros e encontrar  o melhor algoritmo para nossa solução"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "a88b054d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# definir um dicionário para modelos e seus parâmetros\n",
+    "model_param = {\n",
+    "    'linearmodel': {\n",
+    "        'model': linear_model.LinearRegression(),\n",
+    "        'params' : {\n",
+    "\n",
+    "        }  \n",
+    "    },\n",
+    "    'random_forest': {\n",
+    "        'model': RandomForestRegressor(),\n",
+    "        'params' : {\n",
+    "            'n_estimators': [1,5,10,50,100],\n",
+    "            'random_state': [0,20,50]\n",
+    "        }\n",
+    "    },\n",
+    "    'GradientBoosting' : {\n",
+    "        'model': GradientBoostingRegressor(),\n",
+    "        'params': {\n",
+    "            'n_estimators': [50,100,150], \n",
+    "            'max_depth': [1,3,5,7], \n",
+    "            'min_samples_split': [2,3,5],\n",
+    "            'learning_rate': [0.05]\n",
+    "        }\n",
+    "    },\n",
+    "    'AdaBoost' : {\n",
+    "        'model' : AdaBoostRegressor(),\n",
+    "        'params' : {\n",
+    "            \n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "8f1af22c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>best_score</th>\n",
+       "      <th>best_params</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>linearmodel</td>\n",
+       "      <td>-1.708912e+21</td>\n",
+       "      <td>{}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>random_forest</td>\n",
+       "      <td>8.596077e-01</td>\n",
+       "      <td>{'n_estimators': 50, 'random_state': 0}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>GradientBoosting</td>\n",
+       "      <td>8.843841e-01</td>\n",
+       "      <td>{'learning_rate': 0.05, 'max_depth': 3, 'min_s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AdaBoost</td>\n",
+       "      <td>7.928817e-01</td>\n",
+       "      <td>{}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              model    best_score  \\\n",
+       "0       linearmodel -1.708912e+21   \n",
+       "1     random_forest  8.596077e-01   \n",
+       "2  GradientBoosting  8.843841e-01   \n",
+       "3          AdaBoost  7.928817e-01   \n",
+       "\n",
+       "                                         best_params  \n",
+       "0                                                 {}  \n",
+       "1            {'n_estimators': 50, 'random_state': 0}  \n",
+       "2  {'learning_rate': 0.05, 'max_depth': 3, 'min_s...  \n",
+       "3                                                 {}  "
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Encontrar o melhor modelo\n",
+    "scores = []\n",
+    "for model_name, mp in model_param.items():\n",
+    "  clf = GridSearchCV(mp['model'],mp['params'],cv=3,return_train_score=False)\n",
+    "  clf.fit(X_treino, y_treino)\n",
+    "  scores.append({\n",
+    "      'model' : model_name,\n",
+    "      'best_score' : clf.best_score_,\n",
+    "      'best_params' : clf.best_params_\n",
+    "  })\n",
+    "df = pd.DataFrame(scores,columns=['model','best_score','best_params'])\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea894213",
+   "id": "cf80e1da",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -6553,7 +6742,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f238154",
+   "id": "c31f0d06",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b56ca482",
    "metadata": {},
    "outputs": [],
    "source": []
