--- a/Projeto-ML-Regressao-Precos-das-Casas-Python.ipynb
+++ b/Projeto-ML-Regressao-Precos-das-Casas-Python.ipynb
@@ -60,8 +60,7 @@
    "source": [
     "# Carregando os dataset\n",
     "dados_treino = pd.read_csv('train.csv')\n",
-    "dados_teste = pd.read_csv('test.csv')\n",
-    "dados_total = [dados_treino, dados_teste]"
+    "dados_teste = pd.read_csv('test.csv')"
    ]
   },
   {
@@ -4986,6 +4985,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "861a939c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'head'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [89]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdados_total\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhead\u001b[49m()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'head'"
+     ]
+    }
+   ],
+   "source": [
+    "dados_total.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f209a42b",
    "metadata": {},
@@ -6364,7 +6385,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "36430cf5",
+   "id": "c8675f57",
    "metadata": {},
    "outputs": [
     {
@@ -6576,7 +6597,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "723fc8f1",
+   "id": "c0d9863c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6591,7 +6612,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "5663e199",
+   "id": "f4d7d7da",
    "metadata": {},
    "outputs": [
     {
@@ -6628,7 +6649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2e37911",
+   "id": "e8496ac2",
    "metadata": {},
    "outputs": [],
    "source": []
