--- a/Projeto-ML-Regressao-Precos-das-Casas-Python.ipynb
+++ b/Projeto-ML-Regressao-Precos-das-Casas-Python.ipynb
@@ -6608,27 +6608,19 @@
    "source": [
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn import metrics\n",
-    "# Iterate over the pre-defined list of classifiers\n",
+    "# Iterar sobre a lista pré-definida de classificadores\n",
     "for clf_name, clf in classifiers:\n",
-    "    # Fit clf to the training set\n",
+    "    # Ajustar clf ao conjunto de treinamento\n",
     "    clf.fit(X_treino, y_treino)\n",
     "    \n",
-    "    # Predict y_pred\n",
+    "    # Prever  y_pred\n",
     "    y_pred = clf.predict(X_teste)\n",
     "    y_pred= y_pred.reshape(-1,1)\n",
-    "    # Calculate accuracy\n",
+    "    # Calcular accuracy\n",
     "    error = metrics.mean_squared_error(y_teste, y_pred)\n",
-    "    # Evaluate clf's accuracy on the test set\n",
+    "    # Avalie a precisão do clf no conjunto de teste\n",
     "    print('{:s} MSE : {:.3f}'.format(clf_name, error))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ad6f490",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
